@startuml
'https://plantuml.com/class-diagram

' doesn't contain Config dependencies to static classes

class Main
Main ..> DependencyContainer

class Statistics
Statistics -- Field

class GameLoop
GameLoop -- SimulationCanvas

class Field
Field ..> Rabbit
Field ..> Fox
Field ..> Food
Field *-- FieldEntity

abstract class FieldEntity
FieldEntity -- Field
FieldEntity -- DrawingComponent

abstract class Animal
FieldEntity <|-- Animal
Animal -- MoveComponent
Animal -- PositionComponent

interface DrawingComponent
FieldEntity <.. DrawingComponent

interface MoveComponent
Animal <.. MoveComponent

interface PositionComponent
Animal <.. PositionComponent

class DefaultDrawingComponent
DrawingComponent <|.. DefaultDrawingComponent

class DefaultPositionComponent
PositionComponent <|.. DefaultPositionComponent

class RabbitMoveComponent
MoveComponent <|.. RabbitMoveComponent

class FoxMoveComponent
MoveComponent <|.. FoxMoveComponent

class Food
FieldEntity <|-- Food

class Rabbit
Animal <|-- Rabbit
DefaultDrawingComponent <.. Rabbit
RabbitMoveComponent <.. Rabbit
DefaultPositionComponent <.. Rabbit

class Fox
Animal <|-- Fox
DefaultDrawingComponent <.. Fox
FoxMoveComponent <.. Fox
DefaultPositionComponent <.. Fox

class StatisticsPanel
StatisticsPanel -- Statistics

class SimulationCanvas
SimulationCanvas -- Field

class MainWindow
MainWindow ..> SimulationCanvas
MainWindow ..> ControlPanel
MainWindow ..> StatisticsPanel
MainWindow ..> GameLoop

class ControlPanel
ControlPanel ..> Field
ControlPanel ..> GameLoop

class Config
ConfigValue <.. Config

enum ConfigValue

@enduml
